--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fuse.js": "^3.2.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-advanced-dropdown": "^1.0.0",
     "react-native-vector-icons": "^5.0.0"
   }
 }
